# learn-rust

./: README.md
add/: Cargo.toml  README.md
adder/src/: lib.rs
advanced/: README.md
advanced/src/: main.rs  raw_pointer.rs
collections/: README.md
collections/src/: hashmap.rs  main.rs  str.rs  vector.rs
concurrency/: README.md
concurrency/src/: channel.rs  main.rs  shared_state.rs
control-statements/src/: main.rs
enums/src/: definition.rs  if_let.rs  main.rs  match_flow.rs
error-handling/src/: main.rs
functional-programming/src/: lib.rs  main.rs
functional-programming/src/iter/: main.rs
functions/src/: main.rs
generic/src/: main.rs
generic/src/data_type/: main.rs
guessing-game/: Cargo.toml
guessing-game/src/: main.rs
minigrep/: Cargo.toml  README.md
minigrep/src/: lib.rs  main.rs
oop/: README.md
oop/src/: lib.rs  main.rs  post.rs  syntax.rs
ownership/: README.md
ownership/src/: main.rs  meaning.rs  reference_borrow.rs  slices.rs
patterns/: README.md
patterns/src/: main.rs  syntax.rs
restaurant/: Cargo.toml
restaurant/src/: lib.rs
smart-pointer/: README.md
smart-pointer/src/: leak_memory.rs  lib.rs  main.rs  rc.rs  refcell.rs  tree.rs
src/: main.rs
structs/src/: definition.rs  main.rs  method.rs  rectangles.rs
test/: README.md
test/src/: lib.rs
test_adder/: README.md
test_adder/src/: lib.rs
test_adder/tests/: integration_test.rs
types/src/: main.rs
variables/src/: main.rs
web-server/src/: main.rs
web_server_multi_thread/: Cargo.toml
web_server_multi_thread/src/: lib.rs  main.rs
(+2 files in other folders)
