[package]
name = "minigrep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# profile의 opt-level은 컴파일할때 최적화 수준을 정의한다.
# 0으로 하면 최적화를 덜해서 컴파일이 빨라지지만 코드 실행 속도가 느려질 수 있다.
# 3으로 하면 최적화를 많이해서 컴파일이 느리지만 코드 실해 속도가 빨라질 수 있다.
[profile.dev]
opt-level = 0 # default

[profile.release]
opt-level = 3 # default
